--- a/frontend/intra-tec/src/App.scss
+++ b/frontend/intra-tec/src/App.scss
@@ -53,7 +53,7 @@ a {
 }
 
 h1 {
-    background-image: url('assets/logo-desk.png');
+    background-image: url('assets/desk.png');
     background-repeat: no-repeat;
     font-size: 0!important;
     width: 195px;
