fix encabezado bienvenido (h1 a h2) y se seteo un min width al box del login

--- a/frontend/intra-tec/src/App.scss
+++ b/frontend/intra-tec/src/App.scss
@@ -23,12 +23,12 @@ a {
 
 
 .loginBox {
-   // padding: 40px;
     background: white;
     color: black;
     border-radius: 15px;    
     justify-content: center;
     align-items: center;
+    min-width: 300px;
 }
 
 .loginBox form,
