--- a/frontend/intra-tec/src/App.scss
+++ b/frontend/intra-tec/src/App.scss
@@ -76,36 +76,6 @@ h1 {
     flex-direction: column;
 }
 
-/* NAVBAR MOBILE */
-
-@media only screen and (max-width: 575px) {
-
-    .sidebar {
-        width: 100vw;
-        height: 100vh;
-        padding: 20px 15px;
-        position: relative;
-    }
-
-    .closeSidebar {
-        height: 55px;
-        width: 100vw!important;
-    }
-
-    .closeSidebar #closebtn {
-        margin: 0!important;
-        margin-left: 30px!important;
-    }
-
-    .logo {
-        margin-top: 50px;
-    }
-
-    .main-margin-open {
-        margin-left: 0!important;
-    }
-} 
-
 .sidebar #closebtn {
     position: absolute;
     top: 0;
@@ -175,4 +145,41 @@ h1 {
     opacity: 1;
     border-top: 3px solid;
 }
+
+/* SERVICIES */
+
+.btn-icon {
+    width: 18px;
+}
+
+/* MOBILE */
+
+@media only screen and (max-width: 575px) {
+
+    .sidebar {
+        width: 100vw;
+        height: 100vh;
+        padding: 20px 15px;
+        position: relative;
+    }
+
+    .closeSidebar {
+        height: 55px;
+        width: 100vw!important;
+    }
+
+    .closeSidebar #closebtn {
+        margin: 0!important;
+        margin-left: 30px!important;
+    }
+
+    .logo {
+        margin-top: 50px;
+    }
+
+    .main-margin-open {
+        margin-left: 0!important;
+    }
+} 
+
 
