fix login view mobile styles

--- a/frontend/intra-tec/src/App.scss
+++ b/frontend/intra-tec/src/App.scss
@@ -180,6 +180,15 @@ h1 {
     .main-margin-open {
         margin-left: 0!important;
     }
+
+    .fondo {
+        background: white;
+    }
+
+    .loginBox button {
+        background: #006699;
+        color: white;
+    }
 } 
 
 
