--- a/frontend/intra-tec/src/App.scss
+++ b/frontend/intra-tec/src/App.scss
@@ -176,3 +176,23 @@ h1 {
     border-top: 3px solid;
 }
 
+
+// HOME 
+
+.size-box-stadistics {
+    min-width: 10rem;    
+}
+
+//colores cajas
+.box-recepcionados {
+    background-color: #ff6633;
+}
+.box-proceso {
+    background: #006699;
+}
+.box-reparados {
+    background: #006837 ;
+}
+.sinreparacion {
+    background: #cc3333;
+}
