add home no line color

--- a/frontend/intra-tec/src/App.scss
+++ b/frontend/intra-tec/src/App.scss
@@ -197,7 +197,20 @@ h1 {
 // HOME 
 
 .size-box-stadistics {
-    min-width: 10rem;    
+    min-width: 10rem;  
+}
+
+.stadistic {
+    margin-left: auto;
+}
+
+.ver-button {
+    display: flex;
+    align-items: center;
+    max-width: 6rem;
+    border-radius: 20px;
+    color: white;
+    margin-left: auto;
 }
 
 //colores cajas
@@ -213,3 +226,5 @@ h1 {
 .box-sinreparacion {
     background: #cc3333;
 }
+
+
