--- a/frontend/intra-tec/src/App.scss
+++ b/frontend/intra-tec/src/App.scss
@@ -1,10 +1,12 @@
 // CSS del login :::::::::::::::::::::::::::::::::::::::::::::::::
 
-* {
-    /*outline: 1px solid red;*/
+/*
+*{
+    outline: 1px solid red;
 
     // para quitar stylos por className usar ' list-unstyled '
 }
+*/
 
 li {
     list-style: none;
@@ -227,11 +229,7 @@ h1 {
     background: #cc3333;
 }
 
-<<<<<<< HEAD
 //Validate Errors
 .validateErrors{
     color: #cc3333;
 } 
-=======
-
->>>>>>> alpha
