--- a/frontend/intra-tec/src/App.scss
+++ b/frontend/intra-tec/src/App.scss
@@ -2,11 +2,11 @@
 
 @font-face {
     font-family: 'icomoon';
-    src:  url('../public/fonts/icomoon.eot?5h3mfb');
-    src:  url('../public/fonts/icomoon.eot?5h3mfb#iefix') format('embedded-opentype'),
-      url('../public/fonts/icomoon.ttf?5h3mfb') format('truetype'),
-      url('../public/fonts/icomoon.woff?5h3mfb') format('woff'),
-      url('../public/fonts/icomoon.svg?5h3mfb#icomoon') format('svg');
+    src:  url('../public/fonts/icomoon.eot?t2mh4z');
+    src:  url('../public/fonts/icomoon.eot?t2mh4z#iefix') format('embedded-opentype'),
+      url('../public/fonts/icomoon.ttf?t2mh4z') format('truetype'),
+      url('../public/fonts/icomoon.woff?t2mh4z') format('woff'),
+      url('../public/fonts/icomoon.svg?t2mh4z#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: block;
@@ -25,6 +25,10 @@
     /* Better Font Rendering =========== */
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+  }
+
+  .icon-equipo:before {
+    content: "\e90d";
   }
   
   .icon-dashboard:before {
@@ -238,10 +242,13 @@ h1 {
 
 /* SERVICES */
 
-.btn-icon {
-    width: 18px;
-    max-width: 100%;
+.icon-card {
+    font-size: 40px;
 }
+
+/* ADD SERVICE */
+
+
 
 /* MOBILE */
 
@@ -270,6 +277,7 @@ h1 {
 
     .main-margin-open {
         margin-left: 0!important;
+        padding: 15px!important;
     }
 
     .fondo {
@@ -294,14 +302,37 @@ h1 {
 .box-recepcionados {
     background-color: #ff6633;
 }
+
+.box-recepcionados.card {
+    border: 6px solid #ff6633;
+    border-radius: 20px;
+}
+
 .box-proceso {
     background: #006699;
 }
+
+.box-proceso.card {
+    border: 6px solid #006699;
+    border-radius: 20px;
+}
+
 .box-reparados {
     background: #006837 ;
 }
+
+.box-reparados.card {
+    border: 6px solid #006837;
+    border-radius: 20px;
+}
+
 .box-sinreparacion {
     background: #cc3333;
+}
+
+.box-sinreparacion.card {
+    border: 6px solid #cc3333;
+    border-radius: 20px;
 }
 
 //Validate Errors
