fix width notification

--- a/frontend/intra-tec/src/App.scss
+++ b/frontend/intra-tec/src/App.scss
@@ -171,6 +171,9 @@ a {
     background: white;
 }
 
+.notification {
+    width: 50%;
+}
 
 /* NAVBAR */ 
 
@@ -381,6 +384,7 @@ h1 {
 
     .notification {
         top: 125px;
+        width: 100%;
     }
 } 
 
